Fix an issue with the .align-center class

--- a/web/themes/custom/frontend/src/scss/components/general.scss
+++ b/web/themes/custom/frontend/src/scss/components/general.scss
@@ -497,6 +497,9 @@ blockquote{
 
 .align-center {
   display: inline-block;
+  transform: translateX(-50%);
+  left: 50%;
+  position: relative;
 }
 
 h2.block-title {
